# test

./: README
zuoda/dev_exam_app_A/exam10/: CMakeLists.txt.user.22  a.desktop
zuoda/dev_exam_app_A/exam10/src/: CMakeLists.txt  main.cpp
zuoda/dev_exam_app_A/exam1_sf/: CMakeLists.txt
zuoda/dev_exam_app_A/exam1_sf/src/: exam.h
zuoda/dev_exam_app_A/exam20_mvd/: CMakeLists.txt  CMakeLists.txt.user.22  CMakeLists.txt.user.4.9-pre1
zuoda/dev_exam_app_A/exam20_mvd/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
zuoda/dev_exam_app_B/exam11/: CMakeLists.txt.user.22
zuoda/dev_exam_app_B/exam11/src/: CMakeLists.txt  main.cpp
zuoda/dev_exam_app_B/exam21_mvd/src/: CMakeLists.txt  autotest.cpp  autotest.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  todomodel.cpp  todomodel.h  todoview.cpp  todoview.h
zuoda/dev_exam_app_B/exam3_sf/src/: CMakeLists.txt  exam.h  main.cpp
